# CERC

./: collector.ipynb  pyproject.toml
app/services/charts/: charts.py
app/services/data_io/loader/: excel_loader.py  report_loader.py
app/services/data_io/loader/models/: fields.yaml  landfill_reports.yaml  legacy_loader.yaml  reports.yaml  vehicle_register.yaml
app/services/data_io/unloader/: legacy_excel_unload.py
app/services/data_io/unloader/models/: legacy_unloader.yaml
app/services/data_io/utils/: chunker.py  yaml.py
app/services/statistics/: report_analytics.py
