[tool.poetry]
name = "field-reports-collector"
version = "0.1.0"
description = ""
authors = ["'YehorI' <ivanov.e.s@my.mgimo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
python-calamine = "^0.2.0"
pytest = "^8.2.0"
ipykernel = "^6.29.4"
pydantic = "^2.7.1"
pyyaml = "^6.0.1"
seaborn = "^0.13.2"
loguru = "^0.7.2"
numpy = "^1.26.4"
pyarrow = "^16.1.0"
openpyxl = "^3.1.2"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
